add Jtable VtnProducto
Se termino la mayoria de funciones de la VtnProducto

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestorInventarios
 excludes=
+file.reference.mysql-connector-java.jar=C:\\Users\\Giovanni\\Downloads\\mysql-connector-java.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=GestorInventarios
-main.class=
+main.class=visual.VtnPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
