--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/ivanfl/Library/Application Support/NetBeans/21/build.properties
+user.properties.file=C:\\Users\\Giovanni\\AppData\\Roaming\\NetBeans\\22\\build.properties
