--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestorInventarios
 excludes=
 file.reference.mysql-connector-j-9.0.0.jar=/Users/ivanfl/Desktop/Escritorio - MB Pro de Ivan/INGENIERIA CETI/3ER SEMESTRE/Programaci\u00f3n Orientada a Eventos/3er Parcial/mysql-connector-j-9.0.0/mysql-connector-j-9.0.0.jar
+file.reference.mysql-connector-java.jar=C:\\Users\\Giovanni\\Downloads\\mysql-connector-java.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-9.0.0.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.mysql-connector-java.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=GestorInventarios
-main.class=
+main.class=visual.VtnPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
